Handle exceptions when creating and registering a user